Unit tests added for validating optimised fields and accession